Add Update Configs
Signed-off-by: fkwilken <fkwilken@gmail.com>

--- a/config_spi.json
+++ b/config_spi.json
@@ -3,14 +3,14 @@
     "VERILOG_FILES": "dir::rtl/*.sv",
    
     "CLOCK_PORT": "aclk",
-    "CLOCK_PERIOD": 8,
+    "CLOCK_PERIOD": 20,
    
     "pdk::sky130A": {
       "MAX_FANOUT_CONSTRAINT": 6,
       "FP_CORE_UTIL": 40,
       "PL_TARGET_DENSITY_PCT": "expr::($FP_CORE_UTIL + 10.0)",
       "scl::sky130_fd_sc_hd": {
-        "CLOCK_PERIOD": 8.0
+        "CLOCK_PERIOD": 20.0
       }
     },
 
@@ -23,8 +23,8 @@
     "FP_PDN_HWIDTH": 3.1,
     "FP_PDN_VSPACING": 15.5,
     "FP_PDN_HSPACING": 15.5,
-    "FP_PDN_VPITCH": 50,
-    "FP_PDN_HPITCH": 50,
+    "FP_PDN_VPITCH": 70,
+    "FP_PDN_HPITCH": 70,
     "QUIT_ON_PDN_VIOLATIONS": false,
 
 
@@ -48,10 +48,10 @@
     ],
 
     "MACROS": {
-      "RAM256x16": {
+      "RAM256": {
           "instances": {
           "cache.tag_mem.dffram0": {
-              "location": [100, 1600],
+              "location": [200, 1700],
               "orientation": "N"
           }
         },
@@ -73,49 +73,34 @@
             "dir::macros/dffram256x16/nl/RAM256.nl.v"
           ]
       }, 
-      "RAM256": {
+      "dffram1024x32_wrap": {
           "instances": {
-          "cache.main_cache.dffram0": {
-              "location": [100, 100],
+          "cache.main_cache": {
+              "location": [200, 200],
               "orientation": "N"
-          },
-          "cache.main_cache.dffram1": {
-              "location": [100, 850],
-              "orientation": "FS"
-          },
-          "cache.main_cache.dffram2": {
-              "location": [1100, 100],
-              "orientation": "FN"
-          },
-          "cache.main_cache.dffram3": {
-              "location": [1100, 8500],
-              "orientation": "S"
           }
         },
           "gds": [
-              "dir::macros/dffram256x32/gds/RAM256.gds"
+              "dir::macros/dffram1024x32/gds/dffram1024x32_wrap.gds"
           ],
           "lef": [
-              "dir::macros/dffram256x32/lef/RAM256.lef"
+              "dir::macros/dffram1024x32/lef/dffram1024x32_wrap.lef"
           ],
           "spef": {
               "*": [
-                "dir::macros/dffram256x32/spef/max_/RAM256.max.spef"
+                "dir::macros/dffram1024x32/spef/max/dffram1024x32_wrap.max.spef"
               ]
           },
           "lib": {
-              "*": "dir::macros/dffram256x32/lib/max_ss_100C_1v60/RAM256__max_ss_100C_1v60.lib"
+              "*": "dir::macros/dffram1024x32/lib/max_ss_100C_1v60/dffram1024x32_wrap__max_ss_100C_1v60.lib"
           },
           "nl": [
-            "dir::macros/dffram256x32/nl/RAM256.nl.v"
+            "dir::macros/dffram1024x32/nl/dffram1024x32_wrap.nl.v"
           ]
       }
      },
      "PDN_MACRO_CONNECTIONS": [
         "cache.tag_mem.dffram0 VPWR VGND VPWR VGND",
-        "cache.main_cache.ram0 VPWR VGND VPWR VGND",
-        "cache.main_cache.ram1 VPWR VGND VPWR VGND",
-        "cache.main_cache.ram2 VPWR VGND VPWR VGND",
-        "cache.main_cache.ram3 VPWR VGND VPWR VGND"
+        "cache.main_cache VPWR VGND VPWR VGND"
       ]
   }
