--- a/config_dffram1024.json
+++ b/config_dffram1024.json
@@ -15,7 +15,7 @@
     },
 
     "FP_SIZING": "absolute",
-    "DIE_AREA": [0, 0, 2000, 1400],
+    "DIE_AREA": [0, 0, 1950, 1400],
     "//": "PDN configurations",
     "FP_PDN_VOFFSET": 5,
     "FP_PDN_HOFFSET": 5,
@@ -26,6 +26,14 @@
     "FP_PDN_VPITCH": 50,
     "FP_PDN_HPITCH": 50,
     "QUIT_ON_PDN_VIOLATIONS": false,
+
+    "FP_PDN_CORE_RING": true,
+    "FP_PDN_CORE_RING_VWIDTH": 3.1,
+    "FP_PDN_CORE_RING_HWIDTH": 3.1,
+    "FP_PDN_CORE_RING_VOFFSET": 12.45,
+    "FP_PDN_CORE_RING_HOFFSET": 12.45,
+    "FP_PDN_CORE_RING_VSPACING": 1.7,
+    "FP_PDN_CORE_RING_HSPACING": 1.7,
 
 
     "//": "Hardening strategy variables (this is for 3-Top-Level Integration). Visit https://docs.google.com/document/d/1pf-wbpgjeNEM-1TcvX2OJTkHjqH_C9p-LURCASS0Zo8 for more info",
@@ -59,11 +67,11 @@
               "orientation": "FS"
           },
           "dffram2": {
-              "location": [1000, 100],
+              "location": [1050, 100],
               "orientation": "FN"
           },
           "dffram3": {
-              "location": [1000, 750],
+              "location": [1050, 750],
               "orientation": "S"
           }
         },
