--- a/config_dffram1024.json
+++ b/config_dffram1024.json
@@ -3,14 +3,26 @@
     "VERILOG_FILES": "dir::rtl/*.sv",
    
     "CLOCK_PORT": "clk_i",
-    "CLOCK_PERIOD": 25,
+    "CLOCK_PERIOD": 30,
+    "PL_RESIZER_ALLOW_SETUP_VIOS": true,
+    "GRT_RESIZER_ALLOW_SETUP_VIOS": true,
+    "GRT_ANTENNA_ITERS": 10,
+    "GRT_ANTENNA_MARGIN": 15,
+    "RUN_HEURISTIC_DIODE_INSERTION": true,
+    "DESIGN_REPAIR_MAX_WIRE_LENGTH": 800,
+    "PL_WIRE_LENGTH_COEF": 0.05,
+    "RUN_POST_GRT_DESIGN_REPAIR": true,
+    "DESIGN_REPAIR_MAX_SLEW_PCT": 30,
+    "DESIGN_REPAIR_MAX_CAP_PCT": 30,
+    "MAX_TRANSITION_CONSTRAINT": 1.5,
+
    
     "pdk::sky130A": {
       "MAX_FANOUT_CONSTRAINT": 6,
       "FP_CORE_UTIL": 40,
       "PL_TARGET_DENSITY_PCT": "expr::($FP_CORE_UTIL + 10.0)",
       "scl::sky130_fd_sc_hd": {
-        "CLOCK_PERIOD": 25.0
+        "CLOCK_PERIOD": 30.0
       }
     },
 
@@ -34,19 +46,6 @@
     "FP_PDN_CORE_RING_HOFFSET": 12.45,
     "FP_PDN_CORE_RING_VSPACING": 1.7,
     "FP_PDN_CORE_RING_HSPACING": 1.7,
-
-
-    "//": "Hardening strategy variables (this is for 3-Top-Level Integration). Visit https://docs.google.com/document/d/1pf-wbpgjeNEM-1TcvX2OJTkHjqH_C9p-LURCASS0Zo8 for more info",
-    "SYNTH_ELABORATE_ONLY": false,
-    "RUN_POST_GPL_DESIGN_REPAIR": true,
-    "RUN_POST_CTS_RESIZER_TIMING": true,
-    "DESIGN_REPAIR_BUFFER_INPUT_PORTS": true,
-    "FP_PDN_ENABLE_RAILS": true,
-    "RUN_ANTENNA_REPAIR": true,
-    "RUN_FILL_INSERTION": true,
-    "RUN_TAP_ENDCAP_INSERTION": true,
-    "RUN_CTS": true,
-    "RUN_IRDROP_REPORT": false,
     
     "VDD_NETS": [
       "VPWR"
@@ -82,8 +81,14 @@
               "dir::macros/dffram256x32/lef/RAM256.lef"
           ],
           "spef": {
-              "*": [
+              "max*": [
                 "dir::macros/dffram256x32/spef/max_/RAM256.max.spef"
+              ],
+              "min*": [
+                "dir::macros/dffram256x32/spef/min_/RAM256.min.spef"
+              ],
+              "nom*": [
+                "dir::macros/dffram256x32/spef/nom_/RAM256.nom.spef"
               ]
           },
           "lib": {
